--- a/Kasa/index.html
+++ b/Kasa/index.html
@@ -17,7 +17,7 @@ sWord = prompt("请输入密钥以证明您是8ASA成员")
    
 }   
 </script> 
-  <h1>点<a herf="https://KWYTech.github.io/Kasa/KASA.html">此</a>跳转到官网</p> 
+  <h1>点<a href="https://KWYTech.github.io/Kasa/KASA.html">此</a>跳转到官网</p> 
  </font>
 </body>
 </html>
