--- a/Kasa/index.html
+++ b/Kasa/index.html
@@ -12,7 +12,7 @@ loopy()
 function loopy() {   
 var sWord =""  
 while (sWord != "114514") {//设置密码
-sWord = prompt("请输入密钥以证明您是8ASA成员")   
+sWord = prompt("请输入密钥以证明您是KASA成员或8ASA的老同志！")   
 }   
    
 }   
